# blockchain

./: .gitignore  Cargo.toml  LICENSE  README.md  a.csv  ok.csv
.github/ISSUE_TEMPLATE/: feature_request.md
3_node_test/: one.csv  three.csv  two.csv
4_node_test/: four.csv  one.csv  three.csv
kafka_deployment/: kafka-confmap.yaml  kafka_statefulset.yaml  zookeeper_statefulset.yaml
master_pod/: Cargo.toml  Dockerfile
master_pod/src/: config.yaml  main.rs  stake.rs
node_deployment/: master_pod.yaml  node_pod.yaml  tx_pod.yaml
node_deployment/conf/: master-confmap.yaml  node-confmap.yaml  tx-confmap.yaml
node_pod/: Cargo.toml  Dockerfile
node_pod/src/: block.rs  block_header.rs  concensus.rs  consensus.rs  consensus_header.rs  main.rs  merkle_header.rs  merkle_tree.rs  network.rs  network_header.rs  node.rs  node_header.rs  simulate.rs  test_merkle.rs  transaction.rs  transaction_header.rs
node_pod/src/definitions/: block_header.rs  consensus_header.rs  merkle_header.rs  mod.rs  network_header.rs  node_header.rs  transaction_header.rs
node_pod/src/tests/: mod.rs  test_block.rs  test_merkle.rs
single_node_test/: one.csv
src/: block.rs  concensus.rs  debug.txt  main.rs  merkle_tree.rs  network.rs  node.rs  preprepare.txt  simulate.rs  test1.txt  transaction.rs
transaction_pod/: Cargo.toml  Dockerfile
transaction_pod/src/: config.yaml  main.rs  simulate.rs  test_transaction.rs  transaction.rs  tx_mod.rs
wallet_pod/: Cargo.toml
wallet_pod/src/: ledger.rs  main.rs  owner.rs  test_wallet.rs  transaction.rs  wallet.rs
