[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"
bls-signatures = "0.15.0"
openssl = "0.10.66"
hex = "0.4.3"
futures-util = "0.3.30"
tokio = { version = "*", features = ["full"] }
rdkafka = { version = "0.36", features = ["ssl"] }