[package]
name = "node_pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rand = "0.8.5"
bls-signatures = "0.15.0"
openssl = "0.10.68"
hex = "0.4.3"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
rdkafka = "0.37.0"
serde_yaml = "*"
csv = "*"

[profile.release]
debug = 1