[package]
name = "tx_pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.68"
serde_json = "1.0.134"
bls-signatures = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
rdkafka = "0.37.0"
serde_yaml = "*"
tokio = { version = "1.42.0", features = ["full"] }
futures = "*"

[profile.release]
debug = 1